[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game/world/entity/MovingEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/entity/entities/hazard/RadiationArea.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/world/entity/components/hit_box/HitBox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 72 )

[node name="RadiationArea" instance=ExtResource( 1 )]
collision_mask = 0
script = ExtResource( 2 )
is_gravity_enabled = false
__remove_when_entity_pool_cleared = false

[node name="ColorRect" type="ColorRect" parent="." index="0"]
margin_left = -432.0
margin_top = -72.0
margin_right = 16.0
margin_bottom = 72.0
color = Color( 0.901961, 0, 0, 1 )

[node name="HitBox" parent="." index="1" instance=ExtResource( 3 )]
__team = "enemy_team"

[node name="BodyShape" type="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="BodyShape" parent="." index="2"]
disabled = true

[connection signal="hit_dealt" from="HitBox" to="." method="_on_HitBox_hit_dealt"]
